[cmake] Prevent trailing ":" in PYTHONPATH:
This "fixes" roottest/python/stl/PyROOT_stltests.py crashing with
```
../../../../src/roottest/python/stl/PyROOT_stltests.py .....Fatal Python error: Segmentation fault

Current thread 0x00007f90531a1740 (most recent call first):
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_callers.py", line 45 in _multicall
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_manager.py", line 115 in _hookexec
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_hooks.py", line 493 in __call__
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/runner.py", line 226 in call_and_report
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/runner.py", line 133 in runtestprotocol
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/runner.py", line 114 in pytest_runtest_protocol
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_callers.py", line 77 in _multicall
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_manager.py", line 115 in _hookexec
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_hooks.py", line 493 in __call__
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/main.py", line 350 in pytest_runtestloop
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_callers.py", line 77 in _multicall
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_manager.py", line 115 in _hookexec
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_hooks.py", line 493 in __call__
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/main.py", line 325 in _main
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/main.py", line 271 in wrap_session
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/_pytest/main.py", line 318 in pytest_cmdline_main
  File "/py-venv/ROOT-CI/lib64/python3.11/site-packages/pluggy/_callers.py", line 77 in _multicall
  File "/py-venv/ROOT-C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,10 +239,12 @@ if(MSVC)
       ROOTSYS=${ROOTSYS}
       PYTHONPATH=${ROOTTEST_ENV_PYTHONPATH})
 else()
+  # `PYTHONPATH=...:` (trailing `:`) kills roottest/python/stl/PyROOT_stltests.py.
+  string(REGEX REPLACE ":$" "" TESTPYTHONPATH "${ROOTTEST_ENV_PYTHONPATH}:$ENV{PYTHONPATH}")
   set(ROOTTEST_ENVIRONMENT
       ROOTSYS=${ROOTSYS}
       PATH=${ROOTTEST_ENV_PATH}:$ENV{PATH}
-      PYTHONPATH=${ROOTTEST_ENV_PYTHONPATH}:$ENV{PYTHONPATH}
+      PYTHONPATH=${TESTPYTHONPATH}
       ${ld_library_path}=${ROOTTEST_ENV_LIBRARYPATH}:$ENV{${ld_library_path}})
   if (gnuinstall)
     set(ROOTTEST_ENVIRONMENT ${ROOTTEST_ENVIRONMENT} ROOTIGNOREPREFIX=1)
