Some cmake dependencies needed to be modified (Thanks Bertrand!).

--- a/graf2d/asimage/src/libAfterImage/CMakeLists.txt
+++ b/graf2d/asimage/src/libAfterImage/CMakeLists.txt
@@ -24,12 +24,17 @@ IF(MSVC)
 ENDIF()
 
 set(FREETYPE_INCLUDE_DIR "" CACHE PATH "Path to Freetype include dir")
+set(ZLIB_INCLUDE_DIR "" CACHE PATH "Path to zlib include dir")
 
 if(NOT EXISTS "${FREETYPE_INCLUDE_DIR}/ft2build.h")
   message(ERROR "Can't find ft2build.h in ${FREETYPE_INCLUDE_DIR}")
 endif()
 
-INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR})
+if(NOT EXISTS "${ZLIB_INCLUDE_DIR}/zlib.h")
+  message(ERROR "Can't find zlib.h in ${ZLIB_INCLUDE_DIR}")
+endif()
+
+INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR})
 
 set (LIB_DESTINATION "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")
 
