[tmva][sofie] Use RTensor<int> for the GNN edge index data
Instead of a vector of receivers and senders use a common tensor of shape (2, number of edges) for the edge index conections (receivers senders).
This is in line with pytorch geomoetric data structure

Improve tutorial for parsing the model and for run the model

Fix also tutorial dependency

--- a/tutorials/CMakeLists.txt
+++ b/tutorials/CMakeLists.txt
@@ -308,6 +308,8 @@ else()
   endif()
   if (NOT PY_SONNET_FOUND OR NOT PY_GRAPH_NETS_FOUND)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_GNN.py)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_GNN_Parser.py)
+    list(APPEND tmva_veto tmva/TMVA_SOFIE_GNN_Application.C)
   endif()
   if (NOT tmva-sofie)
     list(APPEND tmva_veto tmva/TMVA_SOFIE_ONNX.C)
@@ -589,6 +591,10 @@ if (PY_KERAS_FOUND)
   set (tmva-keras-ApplicationRegressionKeras-depends tutorial-tmva-keras-RegressionKeras-py)
   set (tmva-keras-ApplicationClassificationKeras-depends tutorial-tmva-keras-ClassificationKeras-py)
 endif()
+if (PY_SONNET_FOUND AND PY_GRAPH_NETS_FOUND)
+   set (tmva-TMVA_SOFIE_GNN_Application-depends tutorial-tmva-TMVA_SOFIE_GNN_Parser-py)
+endif()
+
 
 #--List long-running tutorials to label them as "longtest"
 set (long_running
