--- a/cmake/scripts/ROOTConfig.cmake.in
+++ b/cmake/scripts/ROOTConfig.cmake.in
@@ -53,6 +53,11 @@ get_filename_component(_thisdir "${CMAKE_CURRENT_LIST_FILE}" PATH)
 # It's up to the user what to do with these
 @ROOT_COMPILER_FLAG_HINTS@
 
+#-----------------------------------------------------------------------
+# Provide the C++ standard used by this build of ROOT
+#
+set(ROOT_CXX_STANDARD @CMAKE_CXX_STANDARD@)
+
 #----------------------------------------------------------------------------
 # Configure the path to the ROOT headers, using a relative path if possible.
 # This is only known at CMake time, so we expand a CMake supplied variable.
