Revert "[cmake] Migrate to `XRootDConfig.cmake` shipped by XRootD"
This reverts commit 2ee691da61ca51e4dd857ac8c88f778948fb49a7, it
breaks XRootD configuration on EPEL-based distributions.

--- a/net/netxng/CMakeLists.txt
+++ b/net/netxng/CMakeLists.txt
@@ -21,8 +21,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(NetxNG
     src/TNetXNGSystem.cxx
     src/RRawFileNetXNG.cxx
   LIBRARIES
-    ${XROOTD_CLIENT_LIBRARIES}
-    ${XROOTD_UTILS_LIBRARIES}
+    Xrootd::Xrootd
   DEPENDENCIES
     Net
     RIO
