[RF] Make `RooFFTConfPdf` also work if ROOT was built with `fftw3=OFF`
Since ROOT 6.30, we are not building ROOT with the `math/fftw`
subpackage anymore (`fftw3=OFF`). It is the interface between ROOT and
fftw3, but is incompatible with fftws GPL license.

That means that for default ROOT builds, the `RooFFTConvPdf` class for
FFT convolutions is not working anymore, because it uses `math/fftw`.

This commit implements a solution to make the `RooFFTConvPdf` work
again in this situation: the routine that uses fftw is declared
on-the-fly to the interpreter. This will work if the user has an
external install of `fftw3`, which is usually available in all Linux
distributions.

--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -493,6 +493,10 @@ if(cuda)
   target_compile_definitions(RooFitCore PUBLIC ROOFIT_CUDA)
 endif()
 
+if(fftw3)
+  target_compile_definitions(RooFitCore PUBLIC ROOFIT_MATH_FFTW3)
+endif()
+
 target_include_directories(RooFitCore INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/res>)
 
 # For recent clang, this can facilitate auto-vectorisation.
