Explicitly set Vdt_ROOT when builtin_vdt was used for the build.
This way, a default location would be provided for VDT, which the
user could still override if they wanted to.

--- a/cmake/scripts/ROOTConfig.cmake.in
+++ b/cmake/scripts/ROOTConfig.cmake.in
@@ -108,6 +108,9 @@ if(ROOT_minuit2_omp_FOUND)
   find_dependency(Threads)
 endif()
 if(ROOT_vdt_FOUND AND NOT TARGET VDT::VDT)
+  if(ROOT_builtin_vdt_FOUND)
+    set(Vdt_ROOT "${_thisdir}/.." CACHE PATH "Location of (the builtin) VDT")
+  endif()
   find_dependency(Vdt)
 endif()
 
