[RF] Enable external roottest build
By moving the header currently hidden in `src/RooFit` to `inc/RooFit` we can
allow a roottest build to work when built with an external installation of ROOT.
To preserve the intent of the header, the functions declared are moved to the
`RooFit::Internal` namespace, as they are not meant for public use.

--- a/roofit/roofitcore/CMakeLists.txt
+++ b/roofit/roofitcore/CMakeLists.txt
@@ -130,6 +130,7 @@ ROOT_STANDARD_LIBRARY_PACKAGE(RooFitCore
     RooFit.h
     RooFit/Config.h
     RooFit/Detail/AnalyticalIntegrals.h
+    RooFit/Detail/BatchModeDataHelpers.h
     RooFit/Detail/CodeSquashContext.h
     RooFit/Detail/DataMap.h
     RooFit/Detail/EvaluateFuncs.h
