[tmva][sofie] Add new operators Constant, ConstantOfShape and Split
Include also support for new types (e.g. double) for initialized tensors

--- a/tmva/sofie/CMakeLists.txt
+++ b/tmva/sofie/CMakeLists.txt
@@ -47,8 +47,11 @@ ROOT_STANDARD_LIBRARY_PACKAGE(ROOTTMVASofie
    TMVA/ROperator_Elu.hxx
    TMVA/ROperator_Comparision.hxx
    TMVA/ROperator_EyeLike.hxx
+   TMVA/ROperator_Constant.hxx
+   TMVA/ROperator_Split.hxx
    TMVA/SOFIE_common.hxx
    TMVA/SOFIEHelpers.hxx
+
 
    TMVA/FunctionList.hxx
    TMVA/RModel_GNN.hxx
