--- a/tmva/sofie_parsers/CMakeLists.txt
+++ b/tmva/sofie_parsers/CMakeLists.txt
@@ -59,6 +59,8 @@ ROOT_STANDARD_LIBRARY_PACKAGE(ROOTTMVASofieParser
     src/ParseMatMul.cxx
     src/ParseComparision.cxx
     src/ParseEyeLike.cxx
+    src/ParseConstant.cxx
+    src/ParseSplit.cxx
     ${PROTO_SRCS}
   LIBRARIES PUBLIC
     protobuf::libprotobuf
