[cmake] Set CMAKE_CXX_STANDARD explicitly in RootUseFile.cmake
Closes #6384,
---------

Co-authored-by: Jonas Rembser <jonas.rembser@cern.ch>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -757,18 +757,24 @@ endif()
 cmake_host_system_information(RESULT PROCESSOR QUERY PROCESSOR_DESCRIPTION)
 
 message(STATUS "ROOT Configuration \n
-System          ${CMAKE_SYSTEM}
-Processor       ${PROCESSOR} (${CMAKE_SYSTEM_PROCESSOR})
-Build type      ${CMAKE_BUILD_TYPE}
-Install path    ${CMAKE_INSTALL_PREFIX}
-Compiler        ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}
+System:            ${CMAKE_SYSTEM}
+ROOT Platform:     ${ROOT_PLATFORM}
+ROOT Architecture: ${ROOT_ARCHITECTURE}
+Processor:         ${PROCESSOR} (${CMAKE_SYSTEM_PROCESSOR})
+Build type:        ${CMAKE_BUILD_TYPE}
+Install path:      ${CMAKE_INSTALL_PREFIX}
+Compiler:          ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}
+C++ standard:      ${CMAKE_CXX_STANDARD}
 Compiler flags:
-C               ${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_${_BUILD_TYPE_UPPER}}
-C++             ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_${_BUILD_TYPE_UPPER}}
+ - C:                         ${CMAKE_C_FLAGS}
+ - C (built type specific):   ${CMAKE_C_FLAGS_${_BUILD_TYPE_UPPER}}
+ - C++:                       ${CMAKE_CXX_FLAGS}
+ - C++ (built type specific): ${CMAKE_CXX_FLAGS_${_BUILD_TYPE_UPPER}}
 Linker flags:
-Executable      ${CMAKE_EXE_LINKER_FLAGS}
-Module          ${CMAKE_MODULE_LINKER_FLAGS}
-Shared          ${CMAKE_SHARED_LINKER_FLAGS}\n")
+ - Executable:     ${CMAKE_EXE_LINKER_FLAGS}
+ - Module:         ${CMAKE_MODULE_LINKER_FLAGS}
+ - Shared:         ${CMAKE_SHARED_LINKER_FLAGS}\n")
+
 
 ROOT_SHOW_ENABLED_OPTIONS()
 
