--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -362,13 +362,11 @@ add_custom_target(move_artifacts DEPENDS ${stamp_file} ${artifact_files_builddir
 add_subdirectory (interpreter)
 
 # Update etc/gitinfo.txt for every build.
-add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/etc/gitinfo.txt ${CMAKE_BINARY_DIR}/etc/dummy.txt
-  COMMAND ${CMAKE_COMMAND} -DSRCDIR=${CMAKE_SOURCE_DIR} -DBINDIR=${CMAKE_BINARY_DIR} -P ${CMAKE_SOURCE_DIR}/cmake/modules/UpdateGitInfo.cmake
-  COMMENT "Updating etc/gitinfo.txt."
-)
 add_custom_target(gitinfotxt
   ALL
-  DEPENDS ${CMAKE_BINARY_DIR}/etc/gitinfo.txt
+  COMMAND ${CMAKE_COMMAND} -DSRCDIR=${CMAKE_SOURCE_DIR} -DBINDIR=${CMAKE_BINARY_DIR} -P ${CMAKE_SOURCE_DIR}/cmake/modules/UpdateGitInfo.cmake
+  COMMENT "Updating etc/gitinfo.txt."
+  BYPRODUCTS ${CMAKE_BINARY_DIR}/etc/gitinfo.txt
 )
 install(FILES ${CMAKE_BINARY_DIR}/etc/gitinfo.txt DESTINATION ${CMAKE_INSTALL_SYSCONFDIR})
 
