[PyROOT] There is only one Python version
By removing Python 2 support we do not longer have different environment variables for *_Development_Main and *_Development_Other, so remove the suffix and use the unique environment variable instead.

--- a/python/JupyROOT/CMakeLists.txt
+++ b/python/JupyROOT/CMakeLists.txt
@@ -4,8 +4,8 @@ if(NOT MSVC OR win_broken_tests)
 # Do not run with classic build or if tests are vetoed
 if (ROOT_pyroot_FOUND AND
     NOT ROOT_CLASSIC_BUILD AND
-    NOT (DEFINED ENV{ROOTTEST_IGNORE_JUPYTER_PY2} AND PYTHON_VERSION_MAJOR_Development_Main EQUAL 2) AND
-    NOT (DEFINED ENV{ROOTTEST_IGNORE_JUPYTER_PY3} AND PYTHON_VERSION_MAJOR_Development_Main EQUAL 3))
+    NOT (DEFINED ENV{ROOTTEST_IGNORE_JUPYTER_PY2} AND PYTHON_VERSION_MAJOR EQUAL 2) AND
+    NOT (DEFINED ENV{ROOTTEST_IGNORE_JUPYTER_PY3} AND PYTHON_VERSION_MAJOR EQUAL 3))
 
 set(MODULES_LOCATION ${ROOTSYS}/lib/JupyROOT/helpers)
 set(NBDIFFUTIL ${CMAKE_CURRENT_SOURCE_DIR}/nbdiff.py )
