--- a/python/distrdf/CMakeLists.txt
+++ b/python/distrdf/CMakeLists.txt
@@ -1,10 +1,8 @@
 # Test only if:
 # * RDataFrame is available
 # * PyROOT is available
-# * The Python version is greater than 3.7
 if (ROOT_dataframe_FOUND AND
-    ROOT_pyroot_FOUND AND
-    PYTHON_VERSION_STRING VERSION_GREATER_EQUAL 3.7)
+    ROOT_pyroot_FOUND)
 
     file(COPY test_headers DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     file(COPY test_shared_libraries DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
