[PyROOT] Add tests of automatic injection of move
Test that we automatically inject an `std::move` in the TClingCallFunc wrapper call in cases where a copy constructor is not available for the class.

--- a/bindings/pyroot/pythonizations/test/CMakeLists.txt
+++ b/bindings/pyroot/pythonizations/test/CMakeLists.txt
@@ -198,3 +198,6 @@ endif()
 
 # TComplex pythonizations
 ROOT_ADD_PYUNITTEST(pyroot_tcomplex tcomplex_operators.py)
+
+# Test pass-by-value semantics for types with a deleted copy-constructor
+ROOT_ADD_PYUNITTEST(callfuncwrappers callfuncwrappers.py)
