[smatrix] Add gtests for TMatrix constructors

--- a/math/matrix/test/CMakeLists.txt
+++ b/math/matrix/test/CMakeLists.txt
@@ -6,3 +6,4 @@
 
 ROOT_ADD_GTEST(testMatrixTSparse testMatrixTSparse.cxx LIBRARIES Matrix)
 ROOT_ADD_GTEST(testMatrixTDecomp testMatrixTDecomp.cxx LIBRARIES Matrix)
+ROOT_ADD_GTEST(testMatrixT testMatrixT.cxx LIBRARIES Matrix)
