--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -77,7 +77,7 @@ env:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
-  cancel-in-progress: true
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
   build-macos:
