--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -76,8 +76,8 @@ env:
   OS_REGION_NAME: 'cern'
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
-  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+  cancel-in-progress: true
 
 jobs:
   build-macos:
