Introduce condition to skip CI for pull requests
If the tag `[skip-ci]` is present in the PR title, the CI for that PR
will not be executed.

Co-authored-by: Jonas Hahnfeld <jonas.hahnfeld@cern.ch>

--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -8,6 +8,12 @@ on: pull_request
 
 jobs:
   clang-format:
+    # For any event that is not a PR, the CI will always run. In PRs, the CI
+    # can be skipped if the tag [skip-ci] is written in the title.
+    if: |
+        (github.repository_owner == 'root-project' && github.event_name != 'pull_request') ||
+        (github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '[skip-ci]'))
+
     runs-on: ubuntu-latest
     env:
       TRAVIS_BRANCH: ${{ github.base_ref }} 
