Change if condition for github actions
Using `||` means that *any* event type would trigger the CI, as long as it was
done against the main ROOT repository.

--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -81,7 +81,7 @@ concurrency:
 
 jobs:
   build-macos:
-    if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
+    if: github.repository_owner == 'root-project' && github.event_name == 'pull_request'
 
     permissions:
       contents: read
@@ -208,7 +208,7 @@ jobs:
 
 
   build-windows:
-    if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
+    if: github.repository_owner == 'root-project' && github.event_name == 'pull_request'
 
     permissions:
       contents: read
@@ -316,7 +316,7 @@ jobs:
 
 
   build-linux:
-    if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
+    if: github.repository_owner == 'root-project' && github.event_name == 'pull_request'
 
     permissions:
       contents: read
@@ -482,7 +482,7 @@ jobs:
           if-no-files-found: error
 
   event_file:
-    if: github.repository_owner == 'root-project' || github.event_name == 'pull_request'
+    if: github.repository_owner == 'root-project' && github.event_name == 'pull_request'
     name: "Upload Event Payload"
     runs-on: ubuntu-latest
     steps:
