--- a/.github/workflows/root-ci.yml
+++ b/.github/workflows/root-ci.yml
@@ -95,12 +95,15 @@ jobs:
       matrix:
         # Specify platform + arch + (optional) build option overrides
         #
-        # Available platforms: mac14
+        # Available platforms: mac14, mac-beta
         # Common configs: {Release,Debug,RelWithDebInfo)
         # Build options: https://root.cern/install/build_from_source/#all-build-options
         include:
           - platform: mac14
             arch: ARM64
+            overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
+          - platform: mac-beta
+            arch: X86
             overrides: ["LLVM_ENABLE_ASSERTIONS=On", "CMAKE_CXX_STANDARD=20"]
 
     runs-on: # Using '[self-hosted, ..., ...]' does not work for some reason :)
