[ntuple] split off RNTupleCollectionWriter header
Along the way renames RCollectionNTupleWriter class to
RNTupleCollectionWriter.

--- a/tree/ntuple/CMakeLists.txt
+++ b/tree/ntuple/CMakeLists.txt
@@ -25,6 +25,7 @@ HEADERS
   ROOT/RFieldVisitor.hxx
   ROOT/RMiniFile.hxx
   ROOT/RNTupleAnchor.hxx
+  ROOT/RNTupleCollectionWriter.hxx
   ROOT/RNTupleDescriptor.hxx
   ROOT/RNTupleImtTaskScheduler.hxx
   ROOT/RNTupleMerger.hxx
